_sass/_sidebar.scss
#sidebar {
  background: $blue-secondary;
  color: $sidebar-color;
  float: left;
  height: 100%;
  overflow: auto;
  position: fixed;
  top: 0;
  width: 240px;

  @media (prefers-color-scheme: dark) {
    background: $blue-secondary-dark;
    color: $sidebar-color-dark;
  }

  h1 {
    background: $blue-primary;
    font-size: 1.5em;
    margin: 0;
    padding: 20px;
    text-transform: uppercase;
    display: flex;
    display: -ms-flexbox;
    display: -webkit-flex;
    justify-content: space-between;
    align-items: center;

    @media (prefers-color-scheme: dark) {
      background: $blue-primary-dark;
    }
  }

  h2 {
    color: $sidebar-heading;
    font-size: 90%;
    margin: 0;
    margin-bottom: 10px;
    text-transform: uppercase;

    @media (prefers-color-scheme: dark) {
      color: $sidebar-heading-dark;
    }
  }

  input {
    background: $blue-tertiary;
    border: 1px solid $blue-tertiary;
    color: $sidebar-color;
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    margin-bottom: 20px;
    padding: 5px 10px;

    &:active,
    &:focus {
      border-color: $blue-primary;
      outline: none;
    }

    @media (prefers-color-scheme: dark) {
      background: $blue-tertiary-dark;
      border-color: $blue-tertiary-dark;
      color: $sidebar-color-dark;

      &:active,
      &:focus {
        border-color: $blue-primary-dark;
      }
    }
  }

  ul {
    list-style: none;
    margin: 0;
    padding: 0;

    &#links {
      padding: 20px;
    }

    ul {
      padding-left: 20px;
    }

    li {
      a {
        color: $sidebar-color;
        display: block;
        padding: 0 0 15px;

        @media (prefers-color-scheme: dark) {
          color: $sidebar-color-dark;
        }

        &:active,
        &.active {
          text-decoration: underline;
        }
      }
    }
  }
}

